--- a/styles.css
+++ b/styles.css
@@ -9,4 +9,11 @@ h1 {
     text-align: center;
 }
 
-#
+section {
+    border: 3px solid yellow;
+    margin: 5px;
+    border-radius: 5px;
+    padding-left: 10px;
+}
+
+#category_label
