--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,50 @@
 body {
     font-family: "Arial";
-    background: linear-gradient(green, white);
-    background-attachment: fixed;
+    background-image: url("fabian-blank-pElSkGRA2NU-unsplash.jpg");
+    /* background: linear-gradient(green, white); */
+    /* background-attachment: fixed; */
+    background-color: #cccccc; /* Used if the image is unavailable */
+    height: 500px; /* You must set a specified height */
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover; /* Resize the background image to cover the entire container */
 }
 
 h1 {
-    color: white;
+    color: gray;
     text-align: center;
 }
 
 section {
-    border: 3px solid yellow;
+    border: 1px solid black;
     margin: 5px;
-    border-radius: 5px;
+    border-radius: 10px;
     padding-left: 10px;
 }
 
+#remaining_balance {
+    background-color: lightgreen;
+    border: 1px solid lightgreen;
+}
+
+#add_expense_section {
+    border: 1px solid lightblue;
+    border-radius: 10px;
+    background-color: lightblue;
+    padding: 10px;
+    opacity: 0.7;
+}
 #category_label {
     display: block; 
 }
+
+#expense_amount_label {
+    display: block;
+}
+
+#submit_expense {
+    width: 100%;
+}
+
+
+
