--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ table, th, td {
   }
 
   #table_section{
-      border: 10px solid pink;
+      border: 5px solid gray;
       padding: 5px;  
   }
 
@@ -52,31 +52,43 @@ table, th, td {
 }
 
 #add_expense_section {
-    border: 1px solid lightblue;
+    border: 1px solid lightgray;
     border-radius: 10px;
-    background-color: lightblue;
+    background-color: lightgray;
     padding: 10px;
     opacity: 0.7;
 }
 #category_label {
-    display: block; 
+    display: block;
+    font-size: 14px;
 }
 
 #expense_amount_label {
-    justify-content: flex-end; 
+    justify-content: space-between; 
     flex-direction: row; 
-    display: block; 
+    display: block;
+    font-size: 14px; 
 }
 
 #submit_expense {
-    width: 100%;
+    width: 100px;
+    /* margin: 5px; */
+    margin-left: auto;
+    margin-right: auto;
 }
 
-input { 
-    width: 50%;
-     
+    .red {
+        color: red;
+    }
+
+
+ /* what you will use when switching from mobile to desktop */
+@media only screen and (min-width: 768px) {
+    #submit_expense {
+        width: auto;
+    }
+    
 }
 
 
-
-
+give the children a parent box in html and then in css modify them.
