--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+
+/* This is Mobile View  */
 body {
     font-family: "Arial";
     background-image: url("fabian-blank-pElSkGRA2NU-unsplash.jpg");
@@ -12,7 +14,7 @@ body {
 
 
 h1 {
-    color: gray;
+    color: #000;
     text-align: center;
 }
 
@@ -23,17 +25,20 @@ section {
     padding-left: 10px;
 }
 
-table, th, td {
-    border: 1px solid black;
+table{
+    border-collapse: collapse;
+    background-color: #f5f5f5; 
+    border-radius:10px; 
+    margin-left: 0px; 
+    width: 100%;  
+}
+
+th, td{
+    border-bottom: 1px solid #000000; 
     border-collapse: collapse; 
     font-size: 12px;
     text-align: center; 
-     
-  }
-
-  #table_section{
-      border: 10px solid pink;
-      padding: 5px;  
+    padding: 3px 10px; 
   }
 
 .container {
@@ -42,9 +47,11 @@ table, th, td {
 }
 
 #remaining_balance {
-    background-color: lightgreen;
-    border: 1px solid lightgreen;
-    font-weight: bold; 
+    background-color: #dcdcdc;
+    border: 1px solid grey;
+    font-weight: bold;
+    color: black;
+    opacity: 0.8;    
 }
 
 #add_expense_section h2{
@@ -52,11 +59,11 @@ table, th, td {
 }
 
 #add_expense_section {
-    border: 1px solid lightblue;
+    border: 1px solid grey;
     border-radius: 10px;
-    background-color: lightblue;
+    background-color: #DCDCDC;
     padding: 10px;
-    opacity: 0.7;
+    opacity: 0.8; 
 }
 #category_label {
     display: block; 
@@ -73,10 +80,43 @@ table, th, td {
 }
 
 input { 
-    width: 50%;
-     
+    width: 50%;   
 }
 
+/* This is Desktop View  */
+
+@media only screen and (min-width:768px) {
+
+* {box-sizing: border-box;}
+
+body{
+    display: flex; 
+}
+
+h1{
+    align-content: flex-start;
+}
+
+#remaining_balance{
+    position: absolute; 
+    width: 45%;   
+}
+
+#add_expense_section{
+    position: relative;
+   top: 14%; 
+   width: 148%; 
+}
+
+#table_section{
+    position: relative; 
+    left: 800px;
+    width: auto;  
+}
+
+
+
+}
 
 
 
