saving removing random git

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ h1 {
 }
 
 section {
-    border: 1px solid black;git
+    border: 1px solid black;
     margin: 5px;
     border-radius: 10px;
     padding-left: 10px;
